Started the project

--- a/index.html
+++ b/index.html
@@ -4,33 +4,35 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>DST Stuff</title>
-    <meta name="description"
-        content="The place where you can find DST (Don't Starve Together) knowledge from a reputable source">
+    <title>The Don't starve IQ guide</title>
+    <meta name="description" content="Put your Don't Starve Together knowledge to the test from gameplay to the lore">
 
     <!-- Facebook Meta Tags -->
     <meta property="og:url" content="">
     <meta property="og:type" content="website">
-    <meta property="og:title" content="DST Stuff">
+    <meta property="og:title" content="The Don't starve IQ guide">
     <meta property="og:description"
-        content="The place where you can find DST (Don't Starve Together) knowledge from a reputable source">
+        content="Put your Don't Starve Together knowledge to the test from gameplay to the lore">
     <meta property="og:image" content="">
 
     <!-- Twitter Meta Tags -->
     <meta name="twitter:card" content="summary_large_image">
     <meta property="twitter:domain" content="">
     <meta property="twitter:url" content="">
-    <meta name="twitter:title" content="DST Stuff">
+    <meta name="twitter:title" content="The Don't starve IQ guide">
     <meta name="twitter:description"
-        content="The place where you can find DST (Don't Starve Together) knowledge from a reputable source">
+        content="Put your Don't Starve Together knowledge to the test from gameplay to the lore">
     <meta name="twitter:image" content="">
+    <link rel="stylesheet" href="CSS/General.css">
 </head>
 
 <body>
-    <div id="main"></div>
+    <div class="containerMain">
+        <div id="main" class="main"></div>
+    </div>
     <script src="https://unpkg.com/react@17/umd/react.production.min.js" crossorigin></script>
     <script src="https://unpkg.com/react-dom@17/umd/react-dom.production.min.js" crossorigin></script>
-    <script src="Translated_JS\loadPage.js"></script>
+    <script type="module" src="Translated_JS\loadPage.js"></script>
 </body>
 
 </html>
