--- a/index.html
+++ b/index.html
@@ -24,14 +24,17 @@
         content="Put your Don't Starve Together knowledge to the test from gameplay to the lore">
     <meta name="twitter:image" content="">
     <link rel="stylesheet" href="CSS/General.css">
+    <link rel="stylesheet" href="Fonts/belisa_plumilla.ttf">
+    <link rel="stylesheet" href="Fonts/StintUltraExpanded-Regular.ttf">
 </head>
 
 <body>
     <div class="containerMain">
         <div id="main" class="main"></div>
     </div>
-    <script src="https://unpkg.com/react@17/umd/react.production.min.js" crossorigin></script>
-    <script src="https://unpkg.com/react-dom@17/umd/react-dom.production.min.js" crossorigin></script>
+    <script src="https://unpkg.com/react/umd/react.production.min.js" crossorigin></script>
+    <script src="https://unpkg.com/react-dom/umd/react-dom.production.min.js" crossorigin></script>
+    <script src="https://unpkg.com/react-router-dom/umd/react-router-dom.min.js" crossorigin></script>
     <script type="module" src="Translated_JS\loadPage.js"></script>
 </body>
 
